WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307998
Fix findString-selection-disabled.html
https://bugs.webkit.org/show_bug.cgi?id=307998
Summary
Fix findString-selection-disabled.html
ccarley2
Reported
2026-02-16 11:44:29 PST
findString-selection-disabled is a constant failure. The test is expecting testRunner.findString to return a bool, but it returns a promise.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-16 11:44:38 PST
<
rdar://problem/170493000
>
ccarley2
Comment 2
2026-02-16 11:46:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58797
EWS
Comment 3
2026-02-17 02:10:40 PST
Committed
307699@main
(487f2fe93398): <
https://commits.webkit.org/307699@main
> Reviewed commits have been landed. Closing PR #58797 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug