Fix findString-selection-disabled.html https://bugs.webkit.org/show_bug.cgi?id=307998 rdar://170493000

Reviewed by Aditya Keerthi.

findString-selection-disabled.html was expecting testRunner.findString
to return a bool, but it returns a promise. I changed the expected return
typed and updated the test to use the test harness.

* LayoutTests/editing/text-iterator/findString-selection-disabled-expected.txt:
* LayoutTests/editing/text-iterator/findString-selection-disabled.html:
* LayoutTests/platform/wk2/TestExpectations:
* Source/WebKit/WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::didFindString):
* Source/WebKit/WebProcess/WebPage/ios/FindControllerIOS.mm:
(WebKit::FindController::didFindString):

Canonical link: https://commits.webkit.org/307699@main